--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <title></title>
   </head>
   <body>
+    <canvas id="canvas-overlay"></canvas>
+    <canvas id="canvas-lines"></canvas>
     <div class="container">
       <div class="content">
         <span id="intro">
@@ -19,8 +21,7 @@
         </span>
         <span id="contact-info">
           <h1 class="main-heading">
-            If you’d like to work together, or see samples of my work, <a href="mailto:amaza.ag@gmail.com">get in touch</a>.&nbsp;👈&nbsp;&nbsp;💌
-          </h1>
+            If you’d like to work together, or see samples of my work, <a href="mailto:amaza.ag@gmail.com">get in touch</a>.<span id="point-left-emoji"><a href="mailto:amaza.ag@gmail.com" style="text-decoration: none;">👈</a></span><span id="mail-heart-emoji"><a href="mailto:amaza.ag@gmail.com" style="text-decoration: none;">💌</a></span>
         </span>
       </div>
     </div>
