Added custom cursor

--- a/index.html
+++ b/index.html
@@ -9,15 +9,22 @@
     <script type="text/javascript" src="main.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <title></title>
+    <style type="text/css">
+       * {
+     cursor: none;
+       }
+   </style>
   </head>
   <body>
+    <div id="small-circle"></div>
+    <div id="big-circle"></div>
     <canvas id="canvas-overlay"></canvas>
     <canvas id="canvas-lines"></canvas>
     <div class="container">
       <div class="content">
         <span id="intro">
           <h1 class="main-heading">
-            Hello. I’m a Brooklyn-based designer from Guatemala. I create, and sometimes code, digital experiences. Currently a Senior Product Designer <a href="https://www.vidmob.com" target="_blank">@VidMob</a>. Previously, <a href="https://www.barrelny.com">@Barrel</a>.
+            Hello. I’m a Brooklyn-based designer from Guatemala. I create, and sometimes code, digital experiences. Currently a Senior Product Designer <a href="https://www.vidmob.com" target="_blank">@VidMob</a>. Previously, <a href="https://www.barrelny.com" target="_blank">@Barrel</a>.
           </h1>
         </span>
         <span id="contact-info">
