--- a/index.html
+++ b/index.html
@@ -1,19 +1,64 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+  <!--                                                        
+                        `.-::::::-.`
+                  ./shmNMMMMMMMMMMMMNdy+:`
+              `/yNMMMMMMMMMMMMMMMMMMMMMMMMdo-
+           `/hMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMNs-
+         `sNMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMd:
+       `oNMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMd-
+      :mMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMs`
+     +MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMd.
+    sMMMMMMMMMMMMMMNNNMMMMMMMMMMMMMMMMNNMMMMMMMMMMMMMMN.
+   oMMMMMMMMMMMMMh-   -yMMMMMMMMMMMN/`  `+MMMMMMMMMMMMMm`
+  -MMMMMMMMMMMMMM.      NMMMMMMMMMMo      yMMMMMMMMMMMMMy
+  hMMMMMMMMMMMMMMy`   `oMMMMMMMMMMMm-    :NMMMMMMMMMMMMMM:
+ .MMMMMMMMMMMMMMMMNdhhNMMMMMMMMMMMMMMmhhmMMMMMMMMMMMMMMMMy
+ /MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMm
+ oMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMN
+ +MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMN
+ -MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMh
+  mMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM/
+  /MMMMMMMMMMMMMMMMo--+mMMMMMMMMMMMNs:-/dMMMMMMMMMMMMMMMm`
+   hMMMMMMMMMMMMMMd     -oydNNNmhs/`    /MMMMMMMMMMMMMMM-
+   `dMMMMMMMMMMMMMMm+`                -sMMMMMMMMMMMMMMM/
+    `dMMMMMMMMMMMMMMMMho:`       `-/smMMMMMMMMMMMMMMMM/
+     `sMMMMMMMMMMMMMMMMMMMNmdddmNMMMMMMMMMMMMMMMMMMMm-
+       -dMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMo`
+         /mMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMy.
+           :hMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMmo.
+             `+hNMMMMMMMMMMMMMMMMMMMMMMMMMMms-
+                `-+ymMMMMMMMMMMMMMMMMMNds/.
+                     `.:/oosyyysso+/-`
+    -->
     <meta charset="utf-8">
+    <title>Andres Maza</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="title" content="Andres Maza">
+    <meta name="description" content="Senior Product Designer, based in NYC">
+    <meta name="keywords" content="andres maza, Guatemala, designer, diseñador, digital designer, product designer, graphic design, websites, web design, new york, new york city, brooklyn">
+    <meta property="og:title" content="Andres Maza">
+    <meta property="og:description" content="Senior Product Designer, based in NYC">
+    <meta property="og:site_name" content="Andres Maza">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="http://andresmaza.com">
+    <meta itemprop="name" content="Andres Maza">
+    <meta itemprop="description" content="Senior Product Designer, based in NYC">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <link rel="canonical" href="http://andresmaza.com">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="favicon/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="favicon/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="favicon/manifest.json">
+    <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#ffffff">
+    <meta name="theme-color" content="#ffffff">
     <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400,700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
     <script type="text/javascript" src="main.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <title></title>
-    <style type="text/css">
-       * {
-     cursor: none;
-       }
-   </style>
   </head>
   <body>
     <div id="small-circle"></div>
