--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-  <!--                                                        
+  <!--
                         `.-::::::-.`
                   ./shmNMMMMMMMMMMMMNdy+:`
               `/yNMMMMMMMMMMMMMMMMMMMMMMMMdo-
@@ -59,6 +59,7 @@
     <link href="styles.css" rel="stylesheet">
     <script type="text/javascript" src="main.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <meta name="google-site-verification" content="EJQw4saNbo9TCYgL5vXCF2QmYRtoYXQHaBSXIrswFuY" />
   </head>
   <body>
     <div id="small-circle"></div>
