Fixed email address

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </span>
         <span id="contact-info">
           <h1 class="main-heading">
-            If you’d like to work together, or see samples of my work, <a href="mailto:amaza.ag@gmail.com">get in touch</a>.<span id="point-left-emoji"><a href="mailto:amaza.ag@gmail.com" style="text-decoration: none;">👈</a></span><span id="mail-heart-emoji"><a href="mailto:amaza.ag@gmail.com" style="text-decoration: none;">💌</a></span>
+            If you’d like to work together, or see samples of my work, <a href="mailto:hola@andresmaza.com">get in touch</a>.<span id="point-left-emoji"><a href="mailto:hola@andresmaza.com" style="text-decoration: none;">👈</a></span><span id="mail-heart-emoji"><a href="mailto:hola@andresmaza.com" style="text-decoration: none;">💌</a></span>
         </span>
       </div>
     </div>
