Remove #big-circle styling and logic. Add scale to small circle on link hover. Add logic to prevent gradient flashing on page load

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   </head>
   <body>
     <div id="small-circle"></div>
-    <div id="big-circle"></div>
+    <!-- <div id="big-circle"></div> -->
     <canvas id="canvas-overlay"></canvas>
     <canvas id="canvas-lines"></canvas>
     <div class="container">
